feat: 현재 학기 설정
