# api-docs.yaml
@@ -631,6 +631,50 @@ paths:
                 type: integer
                 format: int32
       deprecated: true
+  /api/admin/academicTerm:
+    post:
+      tags:
+        - 관리자 API
+      summary: 학기 생성
+      operationId: createAcademicTerm
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AcademicTermForm'
+        required: true
+      responses:
+        '201':
+          description: Created
+    get:
+      tags:
+        - 관리자 API
+      summary: 학기 목록 조회
+      operationId: getAllAcademicTerms
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/AcademicTermDto'
+  /api/admin/academicTerm/{id}/current:
+    patch:
+      tags:
+        - 관리자 API
+      summary: 현재 학기 설정
+      operationId: setCurrentTerm
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: Academic term ID
+      responses:
+        '200':
+          description: OK
 
 components:
   schemas:
@@ -1189,6 +1233,25 @@ components:
           format: int64
           description: Number of study reports
           example: 300
+    AcademicTermForm:
+      type: object
+      properties:
+        year:
+          type: integer
+          description: Academic year (YYYY)
+          example: 2025
+        term:
+          type: string
+          description: Term type (SPRING | FALL | SUMMER | WINTER)
+          example: FALL
+    AcademicTermDto:
+      type: object
+      properties:
+        academicTerms:
+          type: array
+          items:
+            $ref: '#/components/schemas/AcademicTermForm'
+
   securitySchemes:
     bearerAuth:
       type: http
