# src/main/java/edu/handong/csee/histudy/dto/AcademicTermDto.java
@@ -1,0 +1,6 @@
+package edu.handong.csee.histudy.dto;
+
+import edu.handong.csee.histudy.controller.form.AcademicTermForm;
+import java.util.List;
+
+public record AcademicTermDto(List<AcademicTermForm> academicTerms) {}
